crates/plotnik-lib/tests/02-parser/recovery_unclosed/missing_bracket.txt
Q = [(identifier) (string)
------------------ DIAGNOSTICS -------------------
error: missing closing `]`
 --> query.ptk:1:5
  |
1 | Q = [(identifier) (string)
  |     -^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     alternation started here
  |
help: add `]` to close the alternation
